--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
+    "prisma": "^5.3.0",
     "tailwindcss": "^3.3.3"
   }
 }
