--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.3.0",
+    "@nextui-org/react": "^2.1.12",
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -18,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
@@ -30,7 +32,7 @@
     "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
-    "prisma": "^5.3.0",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3"
   }
 }
